# kinect_pi

./: CMakeLists.txt  Readme.md
apps/client/: CMakeLists.txt
apps/server/: CMakeLists.txt
apps/server/src/: .#main.cpp  .main.cpp.swp  main.cpp
apps/simple_read/: CMakeLists.txt
apps/simple_read/include/: '  listener.hpp  session.hpp  utility.hpp
apps/simple_read/src/: listener.cpp  main.cpp  session.cpp  utility.cpp
client/source/: main.cpp
libs/: .#kinect.cpp
libs/kinect/: CMakeLists.txt
libs/kinect/include/: kinect.hpp
libs/kinect/src/: kinect.cpp
server/source/: main.cpp
server/source/device/: kinect.hpp
